syntax = "proto3";

option csharp_namespace = "GrpcService";

package recorder;

service Recorder {
	rpc Save(MeterReadings) returns (MeterReadingsList);
}

message MeterReadingsList{
	repeated  StatusResponce status = 1;
}

message StatusResponce {
	string status = 1;
}



message MeterReadings{
	string client_id = 1;
	string value = 2;
}